homepage modifiée, palette du gout wip, coeur ° repositionner

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,18 +22,15 @@ html {
 }
 
 .container {
-  max-width: 767px;
+  //max-width: 767px;
   min-width: 320px;
   margin: 0 auto;
   @include flex-column;
   justify-content: center;
   align-items: center;
-
-  animation: op;
 }
 
 // spinner
-
 
 .spinner {
   position: absolute;
@@ -85,20 +82,20 @@ html {
   }
   100% {
     transform: rotate(360deg);
-    display: none;
+    opacity: 0;
   }
 }
 
-
-.hide{
+.hide {
+  width: 100%;
   opacity: 0;
   animation: hide 3s 3s forwards;
 }
-@keyframes hide{
-  from{
+@keyframes hide {
+  from {
     opacity: 0;
   }
-  to{
+  to {
     opacity: 1;
   }
 }
@@ -113,7 +110,7 @@ html {
   align-items: center;
   font-family: "shrikhand";
   font-size: 2rem;
-  box-shadow: 0px 1px 1px 1px;
+  //box-shadow: 0px 0px 1px 1px;
   position: relative;
 }
 
@@ -121,7 +118,7 @@ html {
 
 .main {
   width: 100%;
-  min-width: inherit;
+  min-width: 320px;
   @include flex-column;
   &__wrapper {
     width: 100%;
@@ -171,18 +168,21 @@ html {
   &__button {
     @include button;
   }
-  &__button:hover{
+  &__button:hover {
     transform: scale(1.1);
-    opacity: .8;
-    box-shadow: 3px 3px 0px 1px rgba(0,0,0,0.8);
+    opacity: 0.9;
+  @include box-shadow;
   }
 }
-.check-in {
+.check {
   width: 100%;
   @include flex-column;
   padding: 1rem;
   &__heading {
     @include heading-section;
+  }
+  &__box-wrapper {
+    width: 100%;
   }
   &__box {
     display: flex;
@@ -211,7 +211,7 @@ html {
     color: #fff;
   }
   &__icon {
-    margin-right: 2rem;
+    margin: 0, 2rem;
     font-size: 1.2rem;
     opacity: 0.6;
   }
@@ -227,7 +227,6 @@ html {
   background: $color-bg-light;
   &__heading {
     @include heading-section;
-    padding-left: 0;
   }
 }
 
@@ -245,8 +244,8 @@ html {
 }
 .card {
   width: 90%;
-  max-width: 700px;
-  min-width: 280px;
+  //max-width: 700px;
+  //min-width: 280px;
   height: 200px;
   margin: 0 auto;
   position: relative;
@@ -272,6 +271,9 @@ html {
     border-radius: 0 0 15px 15px;
     padding: 0.8rem;
     position: relative;
+    &:hover .heart-icon {
+      opacity: 1;
+    }
   }
   &__heading {
     font-size: 1rem;
@@ -287,6 +289,7 @@ html {
     right: 1rem;
     font-size: 1.3rem;
   }
+
   &__new-box {
     background-color: $color-new;
     position: absolute;
@@ -302,6 +305,19 @@ html {
     color: rgba(10, 141, 109, 255);
     font-size: 1em;
   }
+}
+.heart-icon {
+  color: transparent;
+  background-image: linear-gradient(
+    0deg,
+    $color-primary 0%,
+    $color-secondary 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+
+  opacity: 0;
+  transition: all 250ms ease-in-out;
 }
 
 // footer
@@ -368,31 +384,60 @@ html {
 .banner {
   width: 100%;
   height: 250px;
-}
-.content {
-  position: relative;
-  min-height: 1350px;
-}
-.card-menu {
   
-  min-width: 320px;
+  
+  
+  &__image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  
+  }
+}
 
-  position: absolute;
+.card-menu {
+  position: relative;
+  min-width: 320px;
+  width: 100%;
+  margin-top: -30px;
   @include flex-column;
   align-items: center;
-  top: 200px;
   background: $color-bg-light;
-  right: 0;
-  left: 0;
-  border-radius: 50px 50px 0;
+
+ 
+  border-radius: 30px 30px 0 0;
   padding: 1rem;
   &__restaurant {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    font-family: 'shrikhand';
+    font-family: "shrikhand";
     font-size: 1.5rem;
     padding: 1rem;
+  }
+  &__icons{
+    position: relative;
+  }
+  &__icon{
+    position: absolute;
+    right: 0;
+  }
+  &__icon-2 {
+   opacity: 0;
+    background-image: linear-gradient(
+      0deg,
+      $color-primary 0%,
+      $color-secondary 100%
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+
+    opacity: 0;
+    transition: all 250ms ease-in-out;
+  }
+  &__icon-1:hover &__icon-2 {
+    opacity: 1;
   }
   &__text {
     padding: 1rem 0.5rem 1rem 0;
@@ -436,18 +481,17 @@ html {
 .recipe {
   position: relative;
   margin: 1rem auto;
-  &:hover{
+  &:hover {
     transform-origin: left;
-    transform: scalex(.8);
+    transform: scalex(0.8);
     border-radius: 15px 0 0 15px;
   }
 
   &__wrapper {
     width: 100%;
-  
   }
   &__selected {
-  display: none;
+    display: none;
   }
 }
 
@@ -479,9 +523,12 @@ html {
   .container {
     max-width: 1200px;
   }
-  .check-in {
-    flex-direction: row;
+  .check {
+    &__box-wrapper{
+    display: flex;
     width: 100%;
+    }
+    
     &__box {
       width: 30%;
       max-width: 280px;
