--- a/css/styles.css
+++ b/css/styles.css
@@ -17,14 +17,12 @@ html {
 }
 
 .container {
-  max-width: 767px;
   min-width: 320px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  animation: op;
 }
 
 .spinner {
@@ -75,10 +73,11 @@ html {
   }
   100% {
     transform: rotate(360deg);
-    display: none;
+    opacity: 0;
   }
 }
 .hide {
+  width: 100%;
   opacity: 0;
   animation: hide 3s 3s forwards;
 }
@@ -100,13 +99,12 @@ html {
   align-items: center;
   font-family: "shrikhand";
   font-size: 2rem;
-  box-shadow: 0px 1px 1px 1px;
   position: relative;
 }
 
 .main {
   width: 100%;
-  min-width: inherit;
+  min-width: 320px;
   display: flex;
   flex-direction: column;
 }
@@ -165,28 +163,30 @@ html {
   color: #fff;
   border-radius: 100px;
   background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
-  box-shadow: 0px 2px 2px 1px;
   transition: all 200ms;
   cursor: pointer;
 }
 .search__button:hover {
   transform: scale(1.1);
-  opacity: 0.8;
-  box-shadow: 3px 3px 0px 1px rgba(0, 0, 0, 0.8);
+  opacity: 0.9;
+  box-shadow: 0px 1px 1px 1px #99e2d0;
 }
 
-.check-in {
+.check {
   width: 100%;
   display: flex;
   flex-direction: column;
   padding: 1rem;
 }
-.check-in__heading {
+.check__heading {
   font-weight: bold;
   font-size: 1.5rem;
   padding: 1rem;
 }
-.check-in__box {
+.check__box-wrapper {
+  width: 100%;
+}
+.check__box {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -200,7 +200,7 @@ html {
   background: #f7f6f7;
   box-shadow: 5px 5px 10px #ebebea;
 }
-.check-in__order {
+.check__order {
   display: inline-flex;
   position: absolute;
   width: 26px;
@@ -212,12 +212,12 @@ html {
   left: -13px;
   color: #fff;
 }
-.check-in__icon {
-  margin-right: 2rem;
+.check__icon {
+  margin: 0, 2rem;
   font-size: 1.2rem;
   opacity: 0.6;
 }
-.check-in__text {
+.check__text {
   font-weight: bold;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -233,7 +233,6 @@ html {
   font-weight: bold;
   font-size: 1.5rem;
   padding: 1rem;
-  padding-left: 0;
 }
 
 .cards {
@@ -251,8 +250,6 @@ html {
 
 .card {
   width: 90%;
-  max-width: 700px;
-  min-width: 280px;
   height: 200px;
   margin: 0 auto;
   position: relative;
@@ -279,6 +276,9 @@ html {
   border-radius: 0 0 15px 15px;
   padding: 0.8rem;
   position: relative;
+}
+.card__content:hover .heart-icon {
+  opacity: 1;
 }
 .card__heading {
   font-size: 1rem;
@@ -308,6 +308,15 @@ html {
 .card__new {
   color: #0a8d6d;
   font-size: 1em;
+}
+
+.heart-icon {
+  color: transparent;
+  background-image: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 250ms ease-in-out;
 }
 
 .footer {
@@ -375,23 +384,23 @@ html {
   width: 100%;
   height: 250px;
 }
-
-.content {
-  position: relative;
-  min-height: 1350px;
+.banner__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .card-menu {
+  position: relative;
   min-width: 320px;
-  position: absolute;
+  width: 100%;
+  margin-top: -30px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  top: 200px;
   background: #f7f6f7;
-  right: 0;
-  left: 0;
-  border-radius: 50px 50px 0;
+  border-radius: 30px 30px 0 0;
   padding: 1rem;
 }
 .card-menu__restaurant {
@@ -401,6 +410,24 @@ html {
   font-family: "shrikhand";
   font-size: 1.5rem;
   padding: 1rem;
+}
+.card-menu__icons {
+  position: relative;
+}
+.card-menu__icon {
+  position: absolute;
+  right: 0;
+}
+.card-menu__icon-2 {
+  opacity: 0;
+  background-image: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 250ms ease-in-out;
+}
+.card-menu__icon-1:hover .card-menu__icon-2 {
+  opacity: 1;
 }
 .card-menu__text {
   padding: 1rem 0.5rem 1rem 0;
@@ -468,7 +495,6 @@ html {
   color: #fff;
   border-radius: 100px;
   background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
-  box-shadow: 0px 2px 2px 1px;
   transition: all 200ms;
   cursor: pointer;
 }
@@ -501,11 +527,11 @@ html {
     max-width: 1200px;
   }
 
-  .check-in {
-    flex-direction: row;
+  .check__box-wrapper {
+    display: flex;
     width: 100%;
   }
-  .check-in__box {
+  .check__box {
     width: 30%;
     max-width: 280px;
   }
