--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -16,9 +16,11 @@
   color: #fff;
   border-radius: 100px;
   background: linear-gradient(0deg, $color-primary 0%, $color-secondary 100%);
-  box-shadow: $box-shadow;
   transition: all 200ms;
   cursor: pointer;
+}
+@mixin box-shadow{
+  box-shadow: 0px 1px 1px 1px $color-new;
 }
 
 @mixin underline{
