correction de toutes les pages et realisation des animations.

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,4 +6,6 @@ $color-secondary: #ff79da;
 $color-new: #99e2d0;
 $color-bg-dark:#ebebea;
 $color-bg-light:#f7f6f7;
+$animation-duration-recipe:200ms;
+$animation-duration-dishes: $animation-duration-recipe*3;
 
