--- a/css/styles.css
+++ b/css/styles.css
@@ -200,6 +200,9 @@ html {
   background: #f7f6f7;
   box-shadow: 5px 5px 10px #ebebea;
 }
+.check__box:hover {
+  transform: scale(1.1);
+}
 .check__order {
   display: inline-flex;
   position: absolute;
@@ -288,12 +291,6 @@ html {
   font-size: 14px;
   line-height: 1.5;
 }
-.card__icon {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  font-size: 1.3rem;
-}
 .card__new-box {
   background-color: #99e2d0;
   position: absolute;
@@ -311,6 +308,13 @@ html {
 }
 
 .heart-icon {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 1.3rem;
+}
+
+.heart-icon-1 {
   color: transparent;
   background-image: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
   background-clip: text;
@@ -393,7 +397,7 @@ html {
 
 .card-menu {
   position: relative;
-  min-width: 320px;
+  min-width: 280px;
   width: 100%;
   margin-top: -30px;
   display: flex;
@@ -402,6 +406,7 @@ html {
   background: #f7f6f7;
   border-radius: 30px 30px 0 0;
   padding: 1rem;
+  overflow: hidden;
 }
 .card-menu__restaurant {
   width: 100%;
@@ -409,28 +414,33 @@ html {
   justify-content: space-between;
   font-family: "shrikhand";
   font-size: 1.5rem;
-  padding: 1rem;
+  padding: 1rem -1rem 1rem 0;
+  margin-bottom: 1rem;
 }
 .card-menu__icons {
   position: relative;
 }
 .card-menu__icon {
-  position: absolute;
-  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
-.card-menu__icon-2 {
-  opacity: 0;
-  background-image: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  opacity: 0;
-  transition: all 250ms ease-in-out;
-}
-.card-menu__icon-1:hover .card-menu__icon-2 {
+.card-menu__icon:hover {
   opacity: 1;
 }
+.card-menu__dishes {
+  width: 100%;
+}
 .card-menu__text {
-  padding: 1rem 0.5rem 1rem 0;
+  animation: appear 600ms linear both;
+}
+.card-menu__text:nth-child(1) {
+  animation-delay: 600ms;
+}
+.card-menu__text:nth-child(2) {
+  animation-delay: 1200ms;
+}
+.card-menu__text:nth-child(3) {
+  animation-delay: 1800ms;
 }
 .card-menu__text::after {
   content: "";
@@ -444,25 +454,30 @@ html {
   justify-content: space-between;
   align-items: center;
   width: 95%;
-  max-width: 700px;
   height: 65px;
   background: #fff;
   border-radius: 15px;
   padding-left: 0.8rem;
   margin-bottom: 1rem;
+  overflow: hidden;
 }
 .card-menu__recipe-heading {
   font-size: 1rem;
   font-weight: bold;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 50%;
 }
 .card-menu__recipe-price {
   display: flex;
   justify-content: space-between;
   padding: 0.5rem 0;
   font-size: 0.8rem;
+  margin-right: 1rem;
 }
 .card-menu__recipe-text {
-  width: 230px;
+  width: 50%;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -471,22 +486,89 @@ html {
   font-weight: bold;
 }
 
+@keyframes slide-down {
+  from {
+    transform: translateY(-50%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .recipe {
   position: relative;
   margin: 1rem auto;
+  animation: slide-down 200ms ease-in-out both;
 }
-.recipe:hover {
-  transform-origin: left;
-  transform: scalex(0.8);
-  border-radius: 15px 0 0 15px;
+.recipe:nth-child(1) {
+  animation-delay: 200ms;
+}
+.recipe:nth-child(2) {
+  animation-delay: 400ms;
+}
+.recipe:nth-child(3) {
+  animation-delay: 600ms;
+}
+.recipe:nth-child(4) {
+  animation-delay: 800ms;
+}
+.recipe:nth-child(5) {
+  animation-delay: 1000ms;
+}
+.recipe:nth-child(6) {
+  animation-delay: 1200ms;
+}
+.recipe:nth-child(7) {
+  animation-delay: 1400ms;
+}
+.recipe:nth-child(8) {
+  animation-delay: 1600ms;
+}
+.recipe:nth-child(9) {
+  animation-delay: 1800ms;
+}
+.recipe:hover .recipe__selected {
+  margin-right: 0;
+}
+.recipe:hover .selected {
+  animation: turn 500ms ease-in-out;
 }
 .recipe__wrapper {
   width: 100%;
 }
 .recipe__selected {
-  display: none;
+  height: 100%;
+  display: grid;
+  place-items: center;
+  width: 60px;
+  background: #99e2d0;
+  border-radius: 0 15px 15px 0;
+  margin-right: -82px;
+  transition: margin-right 500ms ease-in-out;
 }
 
+.selected {
+  color: white;
+  font-size: 1.5rem;
+}
+
+@keyframes turn {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
 .add-cart {
   width: 220px;
   padding: 1rem;
@@ -497,6 +579,10 @@ html {
   background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
   transition: all 200ms;
   cursor: pointer;
+}
+.add-cart:hover {
+  box-shadow: 0px 1px 1px 1px #99e2d0;
+  opacity: 0.9;
 }
 
 @media only screen and (min-width: 768px) {
