creation du fichier keyframes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "../css/normalize.css";
 @import "variables";
 @import "mixins";
+@import 'keyframes';
 
 // reset
 
@@ -19,6 +20,11 @@ html {
 
 .red-b {
   border: 1px solid red;
+}
+.hide {
+  width: 100%;
+  opacity: 0;
+  animation: hide 3s 3s forwards;
 }
 
 .container {
@@ -64,41 +70,6 @@ html {
     position: absolute;
   }
 }
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-    visibility: visible;
-    opacity: 0.9;
-  }
-  33% {
-    transform: rotate(120deg);
-
-    opacity: 0.6;
-  }
-  66% {
-    transform: rotate(240deg);
-
-    opacity: 0.3;
-  }
-  100% {
-    transform: rotate(360deg);
-    opacity: 0;
-  }
-}
-
-.hide {
-  width: 100%;
-  opacity: 0;
-  animation: hide 3s 3s forwards;
-}
-@keyframes hide {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
 //header
 
 .header {
@@ -115,6 +86,8 @@ html {
 }
 
 //main
+
+
 
 .main {
   width: 100%;
@@ -484,24 +457,7 @@ html {
   }
 }
 
-@keyframes slide-down {
-  from {
-    transform: translateY(-50%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-@keyframes appear {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
+
 
 .recipe {
   position: relative;
@@ -542,14 +498,7 @@ html {
   font-size: 1.5rem;
   //transform: rotate(0deg) ;
 }
-@keyframes turn {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(-360deg);
-  }
-}
+
 
 .add-cart {
   @include button;
