--- a/sass/_keyframes.scss
+++ b/sass/_keyframes.scss
@@ -31,9 +31,9 @@
     }
   }
 
-  @keyframes slide-down {
+  @keyframes slide-up {
     from {
-      transform: translateY(-50%);
+      transform: translateY(50%);
       opacity: 0;
     }
     to {
