reorganisation du code en partiel pour la page d'acceuil

--- a/sass/abstract/_animations.scss
+++ b/sass/abstract/_animations.scss
@@ -24,9 +24,11 @@
  
   @keyframes hide {
     from {
+      transform: translateY(-50%);
       opacity: 0;
     }
     to {
+      transform: translateY(0);
       opacity: 1;
     }
   }
