fin de la reorganisation du fichier sass

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,9 @@
 @use "./utils" as *;
-@use "./abstract" as *;
+@use "./vendors" as *;
 @use './base/base' as *;
 @use 'components' as *;
 @use './layouts/' as *;
+@use './pages/restaurant' as *;
 
 
 
@@ -11,239 +12,3 @@
 
 
 
-
-
-// footer
-
-
-
-// restaurant page
-
-.header-restaurant {
-  display: flex;
-  align-items: center;
-  &__logo {
-    width: 95%;
-    text-align: center;
-  }
-  &__arrow {
-    color: #000;
-    font-size: 1.2rem;
-    width: 5%;
-  }
-}
-.banner {
-  width: 100%;
-  height: 250px;
-  &__image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-  }
-}
-
-.card-menu {
-  position: relative;
-  width: 100%;
-  margin-top: -30px;
-  @include flex-column;
-  align-items: center;
-  background: $color-bg-light;
-  border-radius: 30px 30px 0 0;
-  padding: 1rem;
-  overflow: hidden;
-  &__heading {
-    font-size: 1.3rem;
-  }
-  &__text {
-    font-size: 1.1rem;
-    animation: appear $animation-duration-dishes linear both;
-    @for $i from 1 through 3 {
-      &:nth-child(#{$i}) {
-        animation-delay: $animation-duration-dishes * $i;
-      }
-    }
-  }
-  &__restaurant {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    font-family: "shrikhand";
-    padding: 1rem 1rem 1rem 0;
-    margin-bottom: 1rem;
-  }
-  &__icons {
-    position: relative;
-  }
-  &__icon {
-    top: 50%;
-    transform: translateY(-50%);
-    &:hover {
-      opacity: 1;
-    }
-  }
-  &__dishes-wrapper {
-    @include flex-column;
-    width: 100%;
-  }
-  &__dishes {
-    width: 100%;
-  }
-
-  &__text::after {
-    content: "";
-    @include underline;
-  }
-  &__recipe {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 95%;
-    height: 65px;
-    background: #fff;
-    border-radius: 15px;
-    padding-left: 0.5rem;
-    margin-bottom: 1rem;
-    overflow: hidden;
-  }
-  &__recipe-heading {
-    font-size: .8rem;
-    font-weight: bold;
-    @include text-overflow;
-    width: 80%;
-  }
-  &__recipe-price {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.5rem 0.5rem 0.5rem 0;
-    font-size: 0.8rem;
-    width: 100%;
-  }
-  &__recipe-text {
-    width: 80%;
-    font-size: .9rem;
-    @include text-overflow;
-  
-  }
-  &__price {
-    font-weight: bold;
-  }
-}
-
-.recipe {
-  position: relative;
-  margin: 1rem auto;
-  animation: slide-up $animation-duration-recipe ease-in-out both;
-  @for $i from 1 through 9 {
-    &:nth-child(#{$i}) {
-      animation-delay: $animation-duration-recipe * $i;
-    }
-  }
-  &__wrapper {
-    width: 100%;
-  }
-  &__selected {
-    height: 100%;
-    display: grid;
-    place-items: center;
-    width: 60px;
-    background: $color-new;
-    border-radius: 0 15px 15px 0;
-    margin-right: -60px;
-    transition: margin-right 500ms ease-in-out;
-  }
-  &:hover {
-    .recipe__selected {
-      margin-right: 0;
-      @include text-overflow;
-    }
-    .selected {
-      animation: turn 500ms ease-in-out;
-    }
-    
-  }
-}
-
-.selected {
-  color: white;
-  font-size: 1.3rem;
-}
-
-.add-cart {
-  @include button;
-  &:hover {
-    @include box-shadow;
-    opacity: 0.9;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  .container {
-    max-width: 991px;
-  }
-  .main {
-    width: 100%;
-  }
-  .cards {
-    flex-direction: row;
-    flex-wrap: wrap;
-    &__item {
-      width: 45%;
-      margin: 1rem;
-    }
-  }
-  .card {
-    width: 45%;
-    max-width: 450px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .container {
-    max-width: 1200px;
-  }
-  .check {
-    &__box-wrapper {
-      display: flex;
-      width: 100%;
-    }
-
-    &__box {
-      width: 30%;
-      max-width: 280px;
-    }
-  }
-  .cards {
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: flex-start;
-    &__item {
-      width: 30%;
-      max-width: 350px;
-      margin: 1rem;
-    }
-  }
-  .card {
-    width: 100%;
-    margin: 1rem;
-  }
-  .restaurant {
-    &__heading {
-      margin-left: 1rem;
-    }
-  }
-  .card-menu {
-    &__dishes-wrapper {
-      flex-direction: row;
-    }
-  }
-
-  .footer {
-    &__content {
-      width: 100%;
-      flex-direction: row;
-      justify-content: space-between;
-    }
-  }
-}
