correction margin .check__icon

--- a/sass/layouts/_check.scss
+++ b/sass/layouts/_check.scss
@@ -43,7 +43,7 @@
       color: #fff;
     }
     &__icon {
-      margin: 0, 2rem;
+      margin: 0 2rem;
       font-size: 1.2rem;
       opacity: 0.6;
     }
