--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,10 +1,10 @@
 @use '../utils' as *;
+
 .spinner {
     position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   
     @include flex-center;
   
