correction du responsive sur tablette

--- a/sass/layouts/_index.scss
+++ b/sass/layouts/_index.scss
@@ -2,6 +2,6 @@
 @forward 'header';
 @forward './booking';
 @forward './check';
-@forward './restaurant';
+@forward './restaurants';
 @forward './footer';
 @forward './breakpoints';
